# algor

./: CMakeLists.txt  README.md
.github/workflows/: build-test.yml
docs/: ALGOR.md
docs/tree/: BINARY.md  HEAP.md  SEARCH.md  TREE.md
include/algor/tree/: binary.h  heap.h  search.h
src/: binary.c  heap.c  search.c
test/: CMakeLists.txt  binary.c  heap.c  main.c  search.c  test.h
